Added sprint velocity and chart to stats
